--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  gap: 50px;
+}
+
 .grid {
   width: 200px;
   height: 400px;
@@ -13,4 +18,17 @@
 
 .piece {
   background-color: blue;
+}
+
+.mini-grid {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: yellow;
+}
+
+.mini-grid div {
+  height: 20px;
+  width: 20px;
 }
