--- a/tetris-react/src/components/BoardCell.css
+++ b/tetris-react/src/components/BoardCell.css
@@ -22,6 +22,11 @@
   border-radius: 4px 4px;
 }
 
+.piece.ghost {
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+}
+
 .piece.ghost .sparkle {
   opacity: 0;
 }
